--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["6285882135288@s.whatsapp.net","62887435047326@s.whatsapp.net"],
+    "ownerNumber": ["6285882135288@s.whatsapp.net","6283848177521@s.whatsapp.net"],
     "ownerName": "Hika Baik",
     "instagram" : "https://instagram.com/sky4you",
-    "gcwa" : "https://instabio.cc/Alphabot",
+    "gcwa" : "https://instagram.com/sky4you",
     "botName": "Hikaa ",
     "footer": "2024 © api.hikabaik.my.id",
     "sessionName": "session",
